新增到导航栏

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,5 +82,6 @@ nav:
     - BAWIKI: ./LingStarYu/bawiki.md
     - 直链提取: ./LingStarYu/directlinker.md
     - Minecraft服务器状态查询: ./LingStarYu/nonebot_mcstatus.md
+    - 尊嘟假嘟翻译器: ./LingStarYu/nonebot_zdjd.md
   - 铃柒白:
     - 简介: ./Ling7White/intro.md
